# content-installer

./: Metadata.toml  README.md  client-only-mods.json
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: curseforge.rs  lib.rs  modpack.rs  settings.rs
frontend/: package.json
frontend/src/: AdminConfigPage.tsx  BrowseTab.tsx  ContentInstallerPage.tsx  ManageTab.tsx  ModpacksTab.tsx  app.css  curseforge.ts  detect.ts  index.ts  modrinth.ts
