[package]
name = "gg_ir77_contentinstaller"
description = "Minecraft Plugin & Mod Installer Extension"
authors = ["Regrave"]
version = "1.0.0"
edition = { workspace = true }

[dependencies]
shared = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wings-api = { workspace = true }
compact_str = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
url = "2"
urlencoding = "2"
sha1_smol = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
